# Aura-IDE

./: .gitignore  README.md  SPEC.md  _dispatch_prompt.txt  patch_mixin.py  pyproject.toml  test.py  test_warning.py
.aura/tools/: _patch_runner_tests.py  capture_fails.py  clean_test_file.py  extract_lines.py
.github/: FUNDING.yml  discord-release.yaml
.github/workflows/: windows-release.yml
aura/: __init__.py  __main__.py  cli_tools.py  config.py  dep_graph.py  dependency_context.py  focused_actions.py  git_ops.py  handoff.py  models.py  paths.py  prompts.py  python_env.py  repo_map.py  sandbox.py  settings.py  startup_logging.py  updater.py  verify.py  version.py  windows_updater.cmd
aura.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aura/backends/: __init__.py  api.py  claude_code.py  cli_base.py  codex.py  gemini.py  gemini_cli.py
aura/bridge/: __init__.py  _shell_pipeline.py  approval_proxy.py  dispatch.py  dispatch_session.py  event_relay.py  qt_bridge.py  spec_formatter.py  todo_controller.py  validation_selector_runtime.py  worker_completion_result.py  worker_recording.py  worker_relay_factory.py  worker_report.py  worker_validation_selector_bridge.py
aura/browser/: runtime.py
aura/client/: __init__.py  deepseek.py  dsml_parser.py  events.py  gemini.py
aura/code_intel/: __init__.py  adapter.py  audit.py  index.py  models.py  python_adapter.py  text_adapter.py
aura/codebase_index/: indexer.py
aura/companion/: client.py  manager.py  replies.py  router.py  state.py
aura/context_gearbox/: __init__.py  models.py  runtime.py  sources.py
aura/conversation/: __init__.py  _dispatch_helpers.py  _recovery_tool_policy.py  completion_guard.py  critic_dispatch.py  critic_verdict.py  dispatch.py  dispatch_contract.py  dispatch_failure.py  dispatch_lifecycle.py  dispatch_plan.py  edit_orchestrator.py  history.py  loop_detection.py  manager.py  manager_recovery.py  manager_send_state.py  manager_tool_round.py  mission_snapshot.py  path_utils.py  persistence.py  planner_refresh.py  planner_stream_hygiene.py  spec_quality.py  syntax_terminal_state.py  task_router.py  task_shape.py  terminal_policy.py  terminal_syntax.py  tool_budget.py  tool_limits.py  tool_markup_guard.py  tool_runner.py  tool_runner_terminal_policy.py  validation_orchestrator.py  verification_progress.py  (+11 more)
cloudflare-relay/: wrangler.toml
docs/: CHANGELOG.md  drones.md
relay/: sessions.py  websocket.py
scripts/: build_nuitka.py  check_humanizer_pipeline.py  check_write_flow_visibility.py  create_git_commit_push_drone.py  local_release.py  smoke_client.py  smoke_conversation.py  smoke_gui.py  smoke_history.py  smoke_planner_worker.py  smoke_tools.py  smoke_vision.py  verify_drone.py
tests/: conftest.py  test_build_nuitka.py  test_chat_view_code_cards.py  test_cli_base.py  test_code_editor_pane.py  test_companion_commands.py  test_companion_local_relay.py  test_companion_replies.py  test_companion_router.py  test_companion_settings.py  test_compiler_delta_diagnostics.py  test_config.py  test_context_gearbox.py  test_conv_persistence.py  test_critic.py  test_dispatch.py  test_dispatch_session_campaign.py  test_drone_build_prompt.py  test_drone_builder_list_model.py  test_drone_chain.py  test_drone_chain_runner.py  test_drone_contracts.py  test_drone_folder_runner.py  test_drone_run_tool.py  test_drone_runner.py  test_drone_store.py  test_drone_summon_tool.py  test_drone_tool_scaffold.py  test_drone_tool_surface.py  test_drone_web_research.py  test_drone_workshop_runner.py  test_drone_workspace_store.py  test_dynamic.py  test_edit_orchestrator.py  test_edit_transaction.py  test_event_relay.py  test_focused_actions.py  test_formatter.py  test_fs_read.py  test_gemini_client.py  (+55 more)
tmp/: smoke_test_ref_check.py
(+280 files in other folders)
