[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura"
version = "1.3.6"
description = "Aura — desktop chat troubleshooter for code, supporting DeepSeek, OpenAI, Anthropic, Gemini, OpenRouter, and MCP."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "cryptography>=41.0",
    "httpx",
    "mcp>=1.0",
    "openai>=1.40",
    "packaging",
    "pillow>=10.0",
    "platformdirs>=4.0",
    "pygments>=2.17",
    "PySide6>=6.6",
    "google-auth",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nuitka",
    "zstandard",
]

[project.scripts]
aura = "aura.__main__:main"

[tool.setuptools.packages.find]
include = ["aura*"]
exclude = ["scripts*", "tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
