[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura"
version = "1.8.51"
description = "Aura — desktop chat troubleshooter for code, supporting DeepSeek, OpenAI, Anthropic, OpenRouter, and MCP."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "certifi>=2024.0",
    "cryptography>=41.0",
    "google-genai>=1.0",
    "httpx",
    "mcp>=1.0",
    "openai>=1.40",
    "packaging",
    "pillow>=10.0",
    "platformdirs>=4.0",
    "pygments>=2.17",
    "PySide6>=6.6",
    "libcst>=1.4",
    "tomli>=2.0; python_version < '3.11'",
    "tree_sitter",
    "tree-sitter-language-pack>=1.10.8",
    "websockets>=12.0",
    "PyJWT>=2.8.0",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nuitka",
    "ruff>=0.8",
    "zstandard",
]
relay = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "PyJWT>=2.8.0",
]

[project.scripts]
aura = "aura.__main__:main"

[tool.setuptools.packages.find]
include = ["aura*"]
exclude = ["scripts*", "tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/test_tool_registry.py" = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["aura"]
extra-standard-library = ["__future__"]
